[wheel]
universal = 1

[metadata]
name = i2x
version = attr: i2x.__version__
author = Tom McDermott, Eran Schweitzer
author_email = Thomas.McDermott@PNNL.gov
description = i2x: Interconnection Innovation e-Xchange Open Test Systems.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
license = BSD
url = https://github.com/pnnl/i2x
project_urls =
    Bug Tracker = https://github.com/pnnl/i2x/issues
classifiers = 
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
install_requires =
    matplotlib>=3.5.2
    networkx>=2.8.4
    requests>=2.28.0;platform_system=='Windows'
    py-dss-interface>=2.0.2;platform_system=='Windows'
    pandas>=1.5.3
    plotly>=5.9.0

[options.packages.find]
where = src

[options.package_data]
* = models/support/*.*, models/ieee9500/*.*, models/ieee_lvn/*.*, models/radial/*.*, der_hca/*.*

[options.entry_points]
console_scripts =
    i2x-der = i2x.api:show_der_config

